--- a/1.FirstCoroutine/app/build.gradle
+++ b/1.FirstCoroutine/app/build.gradle
@@ -47,6 +47,9 @@ android {
 }
 
 dependencies {
+    //coroutines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1")
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
