--- a/RoomDemo/app/build.gradle
+++ b/RoomDemo/app/build.gradle
@@ -19,6 +19,14 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [
+                        "room.schemaLocation": "$projectDir/schemas".toString()
+                ]
+            }
+        }
     }
 
     buildTypes {
@@ -48,6 +56,10 @@ android {
 }
 
 dependencies {
+    implementation "androidx.compose.runtime:runtime:1.4.3"
+    implementation "androidx.compose.runtime:runtime-livedata:1.4.3"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
+
     //ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
 
