--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,10 @@ android {
 
 dependencies {
 
+    //work
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.20"
+    implementation 'androidx.work:work-runtime-ktx:2.8.1'
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
